--- a/index.html
+++ b/index.html
@@ -49,7 +49,32 @@
             />
           </div>
 
-          <ul id="item-list" class="my-4 p-0"></ul>
+          <ul id="item-list" class="my-4 p-0">
+            <li class="list-item">
+              An item
+              <i class="bi bi-x fs-5 text-danger"></i>
+            </li>
+
+            <li class="list-item">
+              A second item
+              <i class="bi bi-x fs-5 text-danger"></i>
+            </li>
+
+            <li class="list-item">
+              A third item
+              <i class="bi bi-x fs-5 text-danger"></i>
+            </li>
+
+            <li class="list-item">
+              A fourth item
+              <i class="bi bi-x fs-5 text-danger"></i>
+            </li>
+
+            <li class="list-item list-item">
+              A fifth item
+              <i class="bi bi-x fs-5 text-danger"></i>
+            </li>
+          </ul>
 
           <div class="d-grid">
             <button id="items-clear" class="btn btn-outline-dark" type="button">
